add auth docs
