# router/auth_route.go
@@ -3,7 +3,6 @@ package router
 import (
 	"airplane_booking_go/config"
 	"airplane_booking_go/controllers"
-	"airplane_booking_go/middlewares"
 
 	"github.com/gin-gonic/gin"
 	"go.mongodb.org/mongo-driver/mongo"
@@ -14,5 +13,5 @@ func UserRoutes(r *gin.Engine, client *mongo.Client, db string){
 	userController := controllers.NewUserController(userCollection)
 
 	r.POST("/register", userController.Register)
-	r.POST("/login", middlewares.AuthMiddleware(), userController.Login)
+	r.POST("/login", userController.Login)
 }
